2011-09-22  Nick Alcock  <nick.alcock@oracle.com>

	* GNUmakefile (TAGS): New.
	(tags): Likewise.
	(PHONIES): Mark targets in the top-level makefile as phony.

2011-09-19  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/Build (working-dlibs): Depend on distinct rules for each
	working dlib.
	* dtrace.spec (files): Add the headers.

2011-09-16  Nick Alcock  <nick.alcock@oracle.com>

	* runtest.sh: Look for Makefunctions, not .mailmap, to find
	top-of-tree.

2011-09-16  Nick Alcock  <nick.alcock@oracle.com>

	* runtest.sh: Support recursive option searching up to the test/
	root.  Call them options consistently, not flags.  Try to catch
	coredumps even if core_pattern or core_uses_pid are set, and even
	if the coredump ulimit is small.  Support --badddof.  Support
	shell comment-quoted test options.  Export $dt_flags to children.
	Support .sh script-driven tests.  Tests named tst.*, err.* and
	drp.* are run as if with /* @@trigger:none */.  Tests named
	err.* assume that exitcode 1 is success.  Tests named err.D_*
	are run with -xerrtags.  Tests named drp.*.d are run with
	-xdroptags.

	* test/utils/badioctl.c: New tool, spray random junk at the DTrace
	device.
	* test/utils/baddof.c: New tool, compile D to DOF and repeatedly
	corrupt it and hand it to the DTrace device.
	* test/utils/Build: New, build them.

	test/{fbt,io,ip,lockstat,proc,sched,sdt,vminfo}/test.options:
	New, @@xfail these directories.
	test/{fbt,io,ip,lockstat,proc,sched,sdt,vminfo}/*.d: Strip out
	individual @@xfail markers.

	* GNUmakefile (INCLUDEDIR): New, include directory.
	* uts/Build: New, install include files in uts/common/sys.

	* test/triggers/, test/unittest, test/utils/include-test.d: Import
	OpenSolaris dtrace testsuite.

2011-09-15  Nick Alcock  <nick.alcock@oracle.com>

	* cmd/dtrace.c (main): When testing is active, look in
	libdtrace/dlibs for .d libraries.
	(usage): Vague up the -t option description.

	* libdtrace/Build (WORKING_DLIBS): New, names of those .d